# c_cpp_template

./: .clang-format  .env_linux  .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  README.md  README_building.md  README_docker.md  conandata.yml  conanfile.py  gcovr.cfg  package-lock.json  package.json  project.json  project.mts
.github/: constants.env
.github/actions/linux_setup_cache/: action.yml
.github/actions/setup_cache/: action.yml
.github/actions/windows_setup_cache/: action.yml
.github/template/: README.md  template_name  template_repository
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml  linux-build.yml  linux_build.yml  template-janitor.yml  windows-build.yml  windows_build.yml
cmake/: Cache.cmake  CompilerCheck.cmake  CompilerWarnings.cmake  ConanProvider.cmake  Cuda.cmake  Doxygen.cmake  ForwardArguments.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
cmake/cross_compile/: Armv7.cmake  Armv8.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/c_cpp_template/: sample_library.hpp
scripts/: consts.mts  envHelper.mts  linuxSetupEnv.mts  refresh_env_and_cb.ps1  refresh_env_and_cb.sh  refreshenv.mts  setup.bat  setup.ps1  setup.sh  setupEnv.mts  setupEnv.ps1  setupMSVCDev.mts  setup_fnm.sh  utils.mts  windowsSetupEnv.mts
src/: CMakeLists.txt
src/intro/: CMakeLists.txt  main.cc
src/json_parser/: CMakeLists.txt  json_parser.cpp  main.cc
src/opencv_practice/: CMakeLists.txt  main.cc
src/opencv_test/: CMakeLists.txt  main.cc
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
